--- a/defaults/main/002-repmgr.yml
+++ b/defaults/main/002-repmgr.yml
@@ -6,14 +6,15 @@ repmgr_password: repmgr
 repmgr_database: repmgr
 repmgr_conninfo: "host={{ ansible_hostname }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
 repmgr_data_directory: "{{ postgresql_data_directory }}"
-repmgr_version: 5.1
+repmgr_version: 5.2.1
 
 # Optional configuration items
 #
 
 # Repositories
-repmgr_gpg_key_url: https://dl.2ndquadrant.com/gpg-key.asc
-repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/release/apt {{ ansible_distribution_release }}-2ndquadrant main"
+repmgr_gpg_key_url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+repmgr_apt_repository: "deb http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main"
+# repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/release/apt {{ ansible_distribution_release }}-2ndquadrant main"
 # Add the following variable in order to install a specific version from 2nd Quadrant repos using apt. See vars/buster.yml
 # repmgr_version_debian: 
 
